sre-hands-on-test/deployment/hello1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello1-app-deployment
  labels:
    app: hello1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello1-app
  template:
    metadata:
      labels:
        app: hello1-app 
    spec:
      containers:
      - name: hello1-app
        image: #path to your docker image
        ports:
        - containerPort: 8000
