sre-hands-on-test/deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /hello1
          backend:
            serviceName: hello1-app-service
            servicePort: 5000
        - path: /hello2
          backend:
            serviceName: hello2-app-service
            servicePort: 5000
